--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.0",
+    "redux": "^4.2.1",
     "save-dev": "^0.0.1-security",
+    "ts-jest": "^29.1.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
     "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --config ./jest.config.js",
+    "test:watch": "jest --config ./jest.config.js --watch",
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
     "lint:fix": "eslint --fix 'src/**/*.ts' 'src/**/*.tsx'",
@@ -50,6 +53,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.46.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
@@ -58,6 +63,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.1",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "nock": "^13.0.11",
     "typescript": "^5.1.6"
   },
