--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest --config ./jest.config.js",
+    "test:coverage": "jest --coverage",
     "test:watch": "jest --config ./jest.config.js --watch",
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
